# rust-axum-seaOrm-ddev-base-setup

./: .example.env  Cargo.toml
.ddev/: config.yaml  docker-compose.adminer.yaml  docker-compose.openresty.yaml  docker-compose.rust.yaml  start-rust.sh
.ddev/nginx_full/: nginx-site.conf
.ddev/openresty/: nginx.conf  ratelimit.lua
.ddev/web-build/: Dockerfile.rust
.ddev/web-entrypoint.d/: 20-rust-dirs.sh
docs/: commands.md  environment.md  middleware.md  setup.md  swagger.md  tenant.md  testing.md
entity/: Cargo.toml
entity/src/: allowed_ip_address.rs  api_token.rs  connection_identity.rs  connection_run.rs  erp_connection_sync_state.rs  inventory_record.rs  inventory_record_event.rs  lib.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  sync_event.rs  tenant.rs
migration/: Cargo.toml  m20260123_000001_api_tokens.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220126_000002_make_api_token_unique.rs  m20220126_000003_add_default_uuid_to_api_token.rs  m20220126_000004_add_allowed_ip_addresses.rs  m20220126_000005_rename_api_token_enum.rs  m20260128_0000006_create_tenant_table.rs  m20260129_000007_create_connection_identity_table.rs  m20260130_000008_create_erp_connection_sync_state_table.rs  m20260130_000009_create_erp_connection_credentials_table.rs  m20260130_000010_create_connection_run_table.rs  m20260216_000011_create_inventory_record_tables.rs  m20260216_000012_create_inventory_record_event_table.rs  m20260216_000013_create_sync_event_tables.rs  m20260216_000014_add_sync_event_connection_run_id.rs  m20260216_000015_alter_inventory_record_event_attributes_to_text.rs  m20260219_000016_rename_sync_event_direction_values.rs
postman/: ERP_Proxy_Server.postman_collection.json  erp-proxy-server.postman_collection.json  erp-proxy-server.postman_environment.json
src/: main.rs  openapi.rs  routes.rs
src/admin/: mod.rs  routes.rs  services.rs
src/auth/: mod.rs  routes.rs  services.rs
src/client-systems/: mod.rs
src/config/: api_token_auth.rs  cors.rs  database.rs  env.rs  hosts.rs  ip_address_auth.rs  metrics.rs  mod.rs  redis.rs
src/connection_identity/: mod.rs  services.rs
src/connection_run/: mod.rs  services.rs
src/constants/: quickbooks.rs
src/entity/: api_token.rs  connection_identity.rs  erp_connection_credentials.rs  erp_connection_sync_state.rs  mod.rs  tenant.rs
src/erp_connection_credentials/: mod.rs  services.rs
src/erp_connection_sync_state/: mod.rs  services.rs
src/inventory_records/: events_services.rs  mod.rs  services.rs
src/middleware/: allowed_hosts.rs  api_token_auth.rs  auth.rs  cors.rs  ip_auth.rs  logging.rs  metrics.rs  (+1 more)
tests/: tenant_tests.rs
(+19 files in other folders)
