[workspace]
members = [".", "entity", "migration"]

[package]
name = "erp-proxy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sea-orm = { version = "2.0.0-rc.29", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15"
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }


entity = { path = "entity" }
migration = { path = "migration" } # for running migrations at startup
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
prometheus = "0.14.0"
quick-xml = "0.37"


[dev-dependencies]
axum-test = "16"
sea-orm = { version = "2.0.0-rc.29", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

