[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
